[project]
name = "nanoslam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "g2opy>=2.1.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "setuptools<81",
]
